--- a/style.css
+++ b/style.css
@@ -69,3 +69,24 @@ footer p {
     bottom:0px;
     line-height: 0px;
 }
+    /* Media query for mobile devices */
+@media (max-width: 768px) {
+    .container {
+        width: 95%; /* Make container more responsive */
+        padding: 20px 10px;
+    }
+    .container p {
+        font-size: 14px;
+    }
+    .container button {
+        height: 45px; /* Adjust button height for smaller screens */
+    }
+    footer {
+        padding: 20px ;
+        height: 25px;
+    }
+    footer p {
+        font-size: 14px;
+        line-height: 0px; /* Adjust line height for smaller screens */
+    }
+}
